add tds os tests controller nextStep Encode

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -12,7 +12,8 @@
     <artifactId>encodedecodestepbystep</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Encode Decode Step By Step</name>
-    <description>A codificator that show step by step process of Encode and Decode. Algorithms supported: Delta, Elias Gamma, Fibonacci, Goulomb, Unary. Possibility of Error detection with Hamming in body and CRC-8 in header.
+    <description>A codificator that show step by step process of Encode and Decode. Algorithms supported: Delta, Elias
+        Gamma, Fibonacci, Goulomb, Unary. Possibility of Error detection with Hamming in body and CRC-8 in header.
     </description>
     <packaging>jar</packaging>
 
