added encode huffman

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
     "module": "esnext",
     "strict": true,
     "esModuleInterop": true,
