--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,8 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "strict": false,
-    
+    "strict": false
   },
   "include": [
     "src"
