--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.jpg",
+      "src": "favicon.png",
       "type": "image/jpg"
     }
   ],
