corrigindo goulomb, scripts automatizados

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
+    "build-file":"node src/scripts/electronBuilder.js",
+    "start-file":"node src/scripts/electronBuilder.js isDev",
     "build": "yarn react-build && yarn electron-build",
-    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "start": "yarn start-file && concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
