--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -242,3 +242,6 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+src/test/resources/filesToEncodeDecodeTest/*.cod
+public/backend_jar/database/CodewordsSizesArray.repository
