Translated the whole project to English and make it work

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,8 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "strict": false
+    "jsx": "react-jsx",
+    "strict": false,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
