--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encode-decode-step-by-step",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "public/electron.js",
   "author": "Bruno Pozzebon,Bruno Camboim,Gustavo Steinmetz",
   "description": "A codificator that show step by step process of Encode and Decode. Algorithms supported: Delta, Elias Gamma, Fibonacci, Goulomb, Unary. Possibility of Error detection with Hamming in body and CRC-8 in header.",
@@ -29,7 +29,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.0",
     "react-toastify": "^6.0.8",
     "react-toggle": "^4.1.1",
     "react-tree-graph": "^5.1.0",
@@ -44,8 +44,8 @@
     "electron-build": "electron-builder",
     "build-file": "node src/scripts/electronBuilder.js",
     "start-file": "node src/scripts/electronBuilder.js isDev",
-    "build": "yarn build-file && yarn react-build && yarn electron-build",
-    "start": "yarn start-file && concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "build": "npm run build-file && npm run react-build && npm run electron-build",
+    "start": "npm run start-file && concurrently \"cross-env BROWSER=none npm react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
